<resources>
    <string name="app_name">Deresute Gacha Simulator</string>
    <string name="exit_dialogue">Are you sure you want to close this app?</string>
    <string name="exit_dialogue_title">Closing App</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="MoneyMenu">Money</string>
    <string name="GachaMenu">Gacha</string>
    <string name="InfoMenu">Info</string>
    <string name="OneGacha">1 Gacha</string>
    <string name="TenGacha">10 Gacha</string>
    <string name="Gold_gacha">1 Gacha (60)</string>
    <string name="Reset_Button">Clear</string>
    <string name="cardName">Name</string>
    <string name="cardType">Type</string>
    <string name="GachaSetting">Gacha Settings</string>
    <string name="pButton">Probability Settings</string>
    <string name="info">Info</string>
    <string name="CurrentVersion">Current Version</string>
    <string name="Exit">Exit</string>
    <string name="SSRare" translatable="false">SS Rare</string>
    <string name="SRare" translatable="false">S Rare</string>
    <string name="Rare" translatable="false">Rare</string>
    <string name="Cute">Cute</string>
    <string name="Cool">Cool</string>
    <string name="Passion">Passion</string>
    <string name="Fes">CindeFes</string>
    <string name="LimitedSwitch">Limited</string>
    <string name="OriginalPButton">Original Probability</string>
    <string name="Apply">Apply</string>
    <string name="PAlert">The probability is out of the specified range. Please set again.</string>
    <string name="PApplySuccess">Successfully Applied</string>
    <string name="ApplyGacha">Apply Probability</string>
    <string name="twitter" translatable="false">Twitter @nazunamoe</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="zero" translatable="false">0</string>
    <string name="Normal" translatable="false">Normal</string>
    <string name="LimitedSetSucess" translatable="false">OK</string>
    <string name="SuccessTitle">Success</string>
    <string name="FailedTitle">Failed</string>
    <string name="OK">OK</string>
    <string name="Menu">Menu</string>
    <string name="CardInfo">Card Info</string>
    <string name="carfdLimited">Limited/Event</string>
    <string name="cardRarity">Rarity</string>
    <string name="Limited">Limited</string>
    <string name="Event">Event</string>
    <string name="FesCard">Fes</string>
    <string name="Usual">Usual</string>
    <string name="NoMoreLimited">This card is no more limited card now</string>
    <string name="MoreLimited">This card is limited card now</string>
    <string name="Version" translatable="false">Beta 10</string>
    <string name="Stat">Stat</string>
    <string name="Skill">Skill</string>
    <string name="Center_Skill">Leader Skill</string>
    <string name="Vocal">Vocal</string>
    <string name="Dance">Dance</string>
    <string name="Visual">Visual</string>
    <string name="Sum">Total</string>
    <string name="Hp">Hp</string>
    <string name="CharaCVInfo">Chara/CV Info</string>
    <string name="Max_Stat">Max Stat</string>
    <string name="Trained">Trained</string>
    <string name="Before_Training">Before</string>
    <string name="After_Training">After</string>
    <string name="Skill_ScoreBonus">Score Bonus</string>
    <string name="Skill_ComboBonus">Combo Bonus</string>
    <string name="Skill_PerfectComboSupport">Combo Support</string>
    <string name="Skill_LifeRecovery">Life Recovery</string>
    <string name="Skill_DamageGuard">Damage Guard</string>
    <string name="Skill_OverLoad">Overload</string>
    <string name="Skill_Concentration">Concentration</string>
    <string name="Skill_Coordinate">Coordinate</string>
    <string name="Skill_SkillBoost">Skill Boost</string>
    <string name="Skill_Focus">Focus</string>
    <string name="Skill_AllRounder">All Rounder</string>
    <string name="Skill_Encore">Encore</string>
    <string name="Skill_LifeSparkle">Life Sparkle</string>
    <string name="Skill_Tuning">Tuning</string>
    <string name="Skill_LongAct">Long Act</string>
    <string name="Skill_FlickAct">Flick Act</string>
    <string name="Skill_SlideAct">Slide Act</string>
    <string name="Skill_Ensemble">Ensemble</string>
    <string name="Skill_VocalMotif">Vocal Motif</string>
    <string name="Skill_DanceMotif">Dance Motif</string>
    <string name="Skill_VisualMotif">Visual Motif</string>
    <string name="Skill_Motif">Motif</string>
    <string name="Skill_TricolorSymphony">Tricolor Symphony</string>
    <string name="Skill_TricolorSynergy">Tricolor Synergy</string>
    <string name="Skill_Alternate">Alternate</string>
    <string name="Skill_Refrain">Refrain</string>
    <string name="Skill_Cinderella_Magic">Cinderella Magic</string>
    <string name="LeaderSkill_VocalUp">Voice</string>
    <string name="LeaderSkill_DanceUp">Step</string>
    <string name="LeaderSkill_VisualUp">Make</string>
    <string name="LeaderSkill_SkillUp">Ability</string>
    <string name="LeaderSkill_Shiny">Shiny</string>
    <string name="LeaderSkill_TricolorVocalUp">Tricolor Voice</string>
    <string name="LeaderSkill_TricolorDanceUp">Tricolor Step</string>
    <string name="LeaderSkill_TricolorVisualUp">Tricolor Make</string>
    <string name="LeaderSkill_TricolorSkillUp">Tricolor Ability</string>
    <string name="LeaderSkill_Brilliance">Brilliance</string>
    <string name="LeaderSkill_Princess">Princess</string>
    <string name="LeaderSkill_Unison">Unison</string>
    <string name="LeaderSkill_LifeUp_Normal">Energy</string>
    <string name="LeaderSkill_LifeUp_Cheer">Cheer</string>
    <string name="LeaderSkill_Fortune_Present">Fortune Present</string>
    <string name="LeaderSkill_Cinderella_Charm">Cinderella Charm</string>
    <string name="LeaderSkill_Cool_Passion">Cool cross Passion</string>
    <string name="LeaderSkill_Passion_Cool">Passion cross Cool</string>
    <string name="LeaderSkill_Cute_Passion">Cute cross Passion</string>
    <string name="LeaderSkill_Passion_Cute">Passion cross Cute</string>
    <string name="LeaderSkill_Cute_Cool">Cute cross Cool</string>
    <string name="LeaderSkill_Cool_Cute">Cool cross Cute</string>
    <string name="LeaderSkill_Resonant_Voice">Resonant Voice</string>
    <string name="LeaderSkill_Resonant_Dance">Resonant Step</string>
    <string name="LeaderSkill_Resonant_Visual">Resonant Make</string>
    <string name="LeaderSkill_Cinderella_Yell">Cinderella Yell</string>
    <string name="LeaderSkill_WorldLevel">World Level</string>
    <string name="LeaderSkill_Cinderella_Wish">Cinderella Wish</string>
    <string name="LeaderSkill_Cinderella_Bress">Cinderella Bress</string>
    <string name="LeaderSkill_Cute_VocalUp_Explain_1">Raises the Vocal appeal of all Cute members by 30%.</string>
    <string name="LeaderSkill_Cute_VocalUp_Explain_2">Raises the Vocal appeal of all Cute members by 60%.</string>
    <string name="LeaderSkill_Cute_VocalUp_Explain_3">Raises the Vocal appeal of all Cute members by 90%.</string>
    <string name="LeaderSkill_Cute_DanceUp_Explain_1">Raises the Dance appeal of all Cute members by 30%.</string>
    <string name="LeaderSkill_Cute_DanceUp_Explain_2">Raises the Dance appeal of all Cute members by 60%.</string>
    <string name="LeaderSkill_Cute_DanceUp_Explain_3">Raises the Dance appeal of all Cute members by 90%.</string>
    <string name="LeaderSkill_Cute_VisualUp_Explain_1">Raises the Visual appeal of all Cute members by 30%.</string>
    <string name="LeaderSkill_Cute_VisualUp_Explain_2">Raises the Visual appeal of all Cute members by 60%.</string>
    <string name="LeaderSkill_Cute_VisualUp_Explain_3">Raises the Visual appeal of all Cute members by 90%.</string>
    <string name="LeaderSkill_Cute_SkillUp_Explain_1">Raises the skill probability of all Cute members by 15%.</string>
    <string name="LeaderSkill_Cute_SkillUp_Explain_2">Raises the skill probability of all Cute members by 30%.</string>
    <string name="LeaderSkill_Cute_SkillUp_Explain_3">Raises the skill probability of all Cute members by 40%.</string>
    <string name="LeaderSkill_Cute_Brilliance_Explain_1">Raises all appeals of all Cute members by 10%.</string>
    <string name="LeaderSkill_Cute_Brilliance_Explain_2">Raises all appeals of all Cute members by 30%.</string>
    <string name="LeaderSkill_Cute_Brilliance_Explain_3">Raises all appeals of all Cute members by 40%.</string>
    <string name="LeaderSkill_Cute_Princess_Explain_1">If there are only Cute idols on the team: Raises all appeals of all Cute members by 35%.</string>
    <string name="LeaderSkill_Cute_Princess_Explain_2">If there are only Cute idols on the team: Raises all appeals of all Cute members by 50%.</string>
    <string name="LeaderSkill_Cute_Unison_Explain">Raises all appeals of all Cute members by 30%. (55% when playing a Cute-type song)</string>
    <string name="LeaderSkill_Cute_LifeUp_Normal_Explain_1">Raises the life of all Cute members by 10%.</string>
    <string name="LeaderSkill_Cute_LifeUp_Normal_Explain_2">Raises the life of all Cute members by 20%.</string>
    <string name="LeaderSkill_Cute_LifeUp_Normal_Explain_3">Raises the life of all Cute members by 30%.</string>
    <string name="LeaderSkill_Cute_LifeUp_Cheer_Explain">If there are only Cute idols on the team: Raises the life of all Cute members by 40%.</string>
    <string name="LeaderSkill_Cool_VocalUp_Explain_1">Raises the Vocal appeal of all Cool members by 30%.</string>
    <string name="LeaderSkill_Cool_VocalUp_Explain_2">Raises the Vocal appeal of all Cool members by 60%.</string>
    <string name="LeaderSkill_Cool_VocalUp_Explain_3">Raises the Vocal appeal of all Cool members by 90%.</string>
    <string name="LeaderSkill_Cool_DanceUp_Explain_1">Raises the Dance appeal of all Cool members by 30%.</string>
    <string name="LeaderSkill_Cool_DanceUp_Explain_2">Raises the Dance appeal of all Cool members by 60%.</string>
    <string name="LeaderSkill_Cool_DanceUp_Explain_3">Raises the Dance appeal of all Cool members by 90%.</string>
    <string name="LeaderSkill_Cool_VisualUp_Explain_1">Raises the Visual appeal of all Cool members by 30%.</string>
    <string name="LeaderSkill_Cool_VisualUp_Explain_2">Raises the Visual appeal of all Cool members by 60%.</string>
    <string name="LeaderSkill_Cool_VisualUp_Explain_3">Raises the Visual appeal of all Cool members by 90%.</string>
    <string name="LeaderSkill_Cool_SkillUp_Explain_1">Raises the skill probability of all Cool members by 15%.</string>
    <string name="LeaderSkill_Cool_SkillUp_Explain_2">Raises the skill probability of all Cool members by 30%.</string>
    <string name="LeaderSkill_Cool_SkillUp_Explain_3">Raises the skill probability of all Cool members by 40%.</string>
    <string name="LeaderSkill_Cool_Brilliance_Explain_1">Raises all appeals of all Cool members by 10%.</string>
    <string name="LeaderSkill_Cool_Brilliance_Explain_2">Raises all appeals of all Cool members by 30%.</string>
    <string name="LeaderSkill_Cool_Brilliance_Explain_3">Raises all appeals of all Cool members by 40%.</string>
    <string name="LeaderSkill_Cool_Princess_Explain_1">If there are only Cool idols on the team: Raises all appeals of all Cool members by 35%.</string>
    <string name="LeaderSkill_Cool_Princess_Explain_2">If there are only Cool idols on the team: Raises all appeals of all Cool members by 50%.</string>
    <string name="LeaderSkill_Cool_Unison_Explain">Raises all appeals of all Cool members by 30%. (55%. when playing a Cool-type song)</string>
    <string name="LeaderSkill_Cool_LifeUp_Normal_Explain_1">Raises the life of all Cool members by 10%.</string>
    <string name="LeaderSkill_Cool_LifeUp_Normal_Explain_2">Raises the life of all Cool members by 20%.</string>
    <string name="LeaderSkill_Cool_LifeUp_Normal_Explain_3">Raises the life of all Cool members by 30%.</string>
</resources>