<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:weightSum="0.5">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/Center_Skill" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_VocalUp"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_DanceUp"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_VisualUp"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_AllUp"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_SkillUp"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_TricolorVocalUp"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_TricolorDanceUp"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_TricolorVisualUp"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_TricolorSkillUp"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_Princess"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_VocalUp"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_Unison"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_LifeUp_Normal"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_LifeUp_Cheer"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_Fortune_Present"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_Cinderella_Charm"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_Cool_Passion"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_Cute_Passion"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_Cute_Cool"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_Resonant_Voice"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_Resonant_Dance"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_Resonant_Visual"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_Cinderella_Yell"
                    android:textAlignment="center" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/LeaderSkill_WorldLevel"
                    android:textAlignment="center" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>