<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.nazunamoe.deresutegachasimulatorm.Fragments.GachaFragment">

    <include
        layout="@layout/gacharesult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:elevation="1dp"
        card:cardCornerRadius="8dp"
        card:cardElevation="1dp"
        card:cardUseCompatPadding="true"
        card:contentPadding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:weightSum="2">>

            <Button
                android:id="@+id/gachasettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/GachaSetting" />

            <Button
                android:id="@+id/pButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/pButton" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:elevation="1dp"
        card:cardCornerRadius="8dp"
        card:cardElevation="1dp"
        card:cardUseCompatPadding="true"
        card:contentPadding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:weightSum="3">>

            <Button
                android:id="@+id/gacha1-gold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/Gold_gacha" />

            <Button
                android:id="@+id/gacha10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/TenGacha" />

            <Button
                android:id="@+id/gacha1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/OneGacha" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

